--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<table>
+		<thead>
+			<th>roll number</th>
+			<th>name</th>
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>869352</td>
+				<td>Deepak</td>
+			</tr>
+			<tr>
+				<td>5623968</td>
+				<td>Ram</td>
+			</tr>
+		</tbody>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
